# fit-buddy-data

./: .dockerignore  .env.exemple  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: Schéma bdd V2.mdj  simulated_db.json
data/Documentation pour développement/: API_PREDICTION.md  Exemple questionnaire.ods
data/Documentation pour développement/Dataset Exercices (à cleaner)/: Workout Database 1200+.xlsx  exercices_autorises.csv
data/Documentation pour développement/Exemples_markdowns_sport/adaptation-au-profil/: 01_ectomorphe.md  02_mesomorphe.md  03_emploi-du-temps-charge.md
data/Documentation pour développement/Exemples_markdowns_sport/contruction-de-programme/: 01_full-body-debutant.md  02_full-body-intermediaire.md  03_split-haut-bas.md  04_push-pull-legs.md  07_sans-materiel.md  08_sur-mesure.md
data/Documentation pour développement/Exemples_markdowns_sport/erreurs-et-corrections/: 04_surentrainement.md
data/Documentation pour développement/Exemples_markdowns_sport/exercices/: 01_biceps.md  03_avant-bras.md  05_pectoraux.md  06_jambes.md  08_gainage.md
data/Documentation pour développement/Exemples_markdowns_sport/techniques-d-optimisation/: 01_supersets.md  03_tempo.md  (+2 more)
data/doc/: API_PREDICTION.md
scripts/: dev.sh  prod.sh
src/: config.py
src/algorithm/: __init__.py  predictor.py
src/app/: main.py
src/app/api/: __init__.py  health.py  prediction.py  sensor.py
src/bdd/: __init__.py  dbmanager.py  get_db_url.py  query.py  schema.py
src/models/: __init__.py  prediction.py  sensor.py
src/services/: __init__.py  sensor.py
(+17 files in other folders)
